# StarLord

./: .dockerignore  .gitignore  Dockerfile  __main__.py  addon.py  config.py  dockerboot.sh  flake.nix  git.py  luabin.py  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  timeutils.py  updateable.py  utils.py  workshop.py
.github/workflows/: publish.yml
config/: spaceage_base.yml  spaceage_forlorn.yml  spaceage_gooniverse.yml
misc/: apt-install.sh  dockerboot.sh  systemd.service
starlord/: addon.py  config.py  git.py  luabin.py  main.py  server.py  timeutils.py  updateable.py
starlord/config/: spaceage_base.yml  spaceage_forlorn.yml  spaceage_gooniverse.yml
